--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,27 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- Spacing -->
+    <dimen name="spacing_small_8">8dp</dimen>
+    <dimen name="spacing_normal_16">16dp</dimen>
+    <dimen name="spacing_medial_24">24dp</dimen>
+    <dimen name="spacing_medium_48">48dp</dimen>
+    <dimen name="spacing_large_56">56dp</dimen>
+    <dimen name="spacing_larger_72">72dp</dimen>
+    <dimen name="spacing_big_80">80dp</dimen>
+    <dimen name="spacing_bigger_88">88dp</dimen>
+
+    <!-- Sizes -->
+    <dimen name="size_small_24">24dp</dimen>
+    <dimen name="size_normal_48">48dp</dimen>
+    <dimen name="size_medium_56">56dp</dimen>
+    <dimen name="size_big_72">72dp</dimen>
+    
+    <!-- Fonts -->
+    <dimen name="font_small_12">12sp</dimen>
+    <dimen name="font_medium_14">14sp</dimen>
+    <dimen name="font_large_16">16sp</dimen>
+    <dimen name="font_huge_20">20sp</dimen>
+
 </resources>
