--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,104 @@
         <item name="colorAccent">@color/color_accent</item>
     </style>
 
+    <style name="header_LL">
+        <item name="android:layout_height">@dimen/size_xtrabig_112</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:paddingTop">@dimen/spacing_medial_28</item>
+        <item name="android:paddingBottom">@dimen/spacing_medial_28</item>
+        <item name="android:background">@color/header_grey</item>
+    </style>
+
+    <style name="subheader_LL">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">@dimen/size_zero_0</item>
+        <item name="android:orientation">vertical</item>
+        <!--<item name="android:layout_marginTop">@dimen/spacing_medial_28</item>
+        <item name="android:layout_marginBottom">@dimen/spacing_medial_28</item>-->
+        <item name="android:layout_gravity">center</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="header_tv">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/font_huge_20</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="header_tv.sub">
+        <item name="android:textSize">@dimen/font_medium_14</item>
+    </style>
+
+    <style name="icon">
+        <item name="android:layout_width">@dimen/size_small_24</item>
+        <item name="android:layout_height">@dimen/size_small_24</item>
+    </style>
+
+    <style name="icon.left">
+        <item name="android:layout_gravity">top|left</item>
+        <item name="android:layout_marginTop">@dimen/spacing_medial_24</item>
+        <item name="android:layout_marginLeft">@dimen/spacing_normal_16</item>
+
+    </style>
+
+    <style name="icon.right">
+        <item name="android:layout_gravity">top|right</item>
+        <item name="android:layout_marginTop">@dimen/spacing_medial_24</item>
+        <item name="android:layout_marginRight">@dimen/spacing_medial_32</item>
+    </style>
+
+    <style name="item_LinLay">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">@dimen/spacing_small_8</item>
+        <item name="android:layout_marginTop">@dimen/spacing_small_8</item>
+        <item name="android:orientation">horizontal</item>
+    </style>
+
+    <style name="item_LinLay.inline">
+        <item name="android:layout_marginTop">@dimen/size_zero_0</item>
+    </style>
+
+    <style name="subitem_LinLay">
+        <item name="android:orientation">vertical</item>
+        <item name="android:layout_height">@dimen/size_big_72</item>
+        <item name="android:layout_width">@dimen/size_zero_0</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_marginLeft">@dimen/spacing_medial_32</item>
+        <item name="android:layout_marginRight">@dimen/spacing_normal_16</item>
+        <item name="android:gravity">bottom</item>
+    </style>
+
+    <style name="subitem_LinLay.inline">
+        <item name="android:layout_marginLeft">@dimen/spacing_larger_72</item>
+    </style>
+
+
+    <style name="infoField_et">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:enabled">false</item>
+        <item name="android:focusable">false</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/grey</item>
+        <item name="android:backgroundTint">@color/grey_backg</item>
+        <item name="android:textSize">@dimen/font_large_18</item>
+        <!--<item name="android:scaleWidth">10%</item>-->
+    </style>
+
+    <style name="line">
+        <item name="android:background">@color/grey_light</item>
+        <item name="android:layout_marginLeft">@dimen/spacing_larger_72</item>
+        <item name="android:layout_height">@dimen/line_size_1</item>
+        <item name="android:layout_width">match_parent</item>
+    </style>
+
+    <style name="vertical_line_tv">
+        <item name="android:layout_height">@dimen/size_medium_56</item>
+        <item name="android:layout_width">@dimen/line_size_1</item>
+        <item name="android:background">@color/divider_grey</item>
+    </style>
+
 </resources>
