--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
@@ -21,8 +17,8 @@
 
 
             <TextView
-                style="@style/header_tv"
                 android:id="@+id/rating_tv"
+                style="@style/header_tv"
                 android:text="5"
                 />
 
@@ -42,8 +38,8 @@
 
 
             <TextView
-                style="@style/header_tv"
                 android:id="@+id/numOfCodeStrings_tv"
+                style="@style/header_tv"
                 android:text="5"
                 />
 
@@ -63,8 +59,8 @@
 
 
             <TextView
-                style="@style/header_tv"
                 android:id="@+id/projects_tv"
+                style="@style/header_tv"
                 android:text="5"
                 />
 
@@ -77,237 +73,250 @@
 
     </LinearLayout>
 
-
-
-    <LinearLayout style="@style/item_LinLay">
-
-        <ImageView
-            style="@style/icon.left"
-            android:src="@drawable/ic_call_black_24dp"
-            />
-
-        <LinearLayout style="@style/subitem_LinLay">
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
-
-                <EditText
-                    style="@style/infoField_et"
-                    android:id="@+id/phone_et"
-                    android:hint="@string/phone"
-                    android:inputType="phone"
-                    android:text="+7(917)971-11-11"
-                    />
-
-            </android.support.design.widget.TextInputLayout>
-
-        </LinearLayout>
-
-        <ImageView
-            style="@style/icon.right"
-            android:src="@drawable/ic_perm_phone_msg_black_24dp"
-            />
-    </LinearLayout>
-
-    <View style="@style/line"/>
-
-
-    <LinearLayout style="@style/item_LinLay">
-
-        <ImageView
-            style="@style/icon.left"
-            android:src="@drawable/ic_email_black_24dp"
-            />
-
-        <LinearLayout style="@style/subitem_LinLay">
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
-
-                <EditText
-                    style="@style/infoField_et"
-                    android:id="@+id/email_et"
-                    android:hint="@string/email"
-                    android:inputType="textEmailAddress"
-                    android:text="makeweb@yandex.ru"
-                    />
-
-            </android.support.design.widget.TextInputLayout>
-
-        </LinearLayout>
-
-        <ImageView
-            style="@style/icon.right"
-            android:src="@drawable/ic_send_black_24dp"
-            />
-    </LinearLayout>
-
-    <View style="@style/line"/>
-
-    <LinearLayout style="@style/item_LinLay">
-
-        <ImageView
-            style="@style/icon.left"
-            android:src="@drawable/vk_circle"
-            />
-
-        <LinearLayout style="@style/subitem_LinLay">
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
-
-                <EditText
-                    style="@style/infoField_et"
-                    android:id="@+id/VK_profile_et"
-                    android:hint="@string/VK_profile"
-                    android:inputType="textUri"
-                    android:text="vk.com/anray"
-                    />
-
-            </android.support.design.widget.TextInputLayout>
-
-        </LinearLayout>
-
-        <ImageView
-            style="@style/icon.right"
-            android:src="@drawable/eye"
-            />
-    </LinearLayout>
-
-    <View style="@style/line"/>
-
-    <LinearLayout style="@style/item_LinLay">
-
-        <ImageView
-            style="@style/icon.left"
-            android:src="@drawable/github_circle"
-            />
-
-        <LinearLayout style="@style/subitem_LinLay">
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
-
-                <EditText
-                    style="@style/infoField_et"
-                    android:id="@+id/repository1_et"
-                    android:hint="@string/repository"
-                    android:inputType="textUri"
-                    android:text="github.com/anray/DevIntensive"
-                    />
-
-            </android.support.design.widget.TextInputLayout>
-
-        </LinearLayout>
-
-        <ImageView
-            style="@style/icon.right"
-            android:src="@drawable/eye"
-            />
-    </LinearLayout>
-
-
-    <LinearLayout style="@style/item_LinLay.inline">
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
-            style="@style/subitem_LinLay.inline">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
+            <LinearLayout style="@style/item_LinLay">
 
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
-
-                <EditText
-                    style="@style/infoField_et"
-                    android:id="@+id/repository2_et"
-                    android:hint="@string/repository"
-                    android:inputType="textUri"
-                    android:text="github.com/anray/DevIntensive"
+                <ImageView
+                    style="@style/icon.left"
+                    android:src="@drawable/ic_call_black_24dp"
                     />
 
-            </android.support.design.widget.TextInputLayout>
+                <LinearLayout style="@style/subitem_LinLay">
 
-        </LinearLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        >
 
-        <ImageView
-            style="@style/icon.right"
-            android:src="@drawable/eye"
-            />
-    </LinearLayout>
+                        <EditText
+                            android:id="@+id/phone_et"
+                            style="@style/infoField_et"
+                            android:hint="@string/phone"
+                            android:inputType="phone"
+                            android:text="+7(917)971-11-11"
+                            />
+
+                    </android.support.design.widget.TextInputLayout>
+
+                </LinearLayout>
+
+                <ImageView
+                    style="@style/icon.right"
+                    android:src="@drawable/ic_perm_phone_msg_black_24dp"
+                    />
+            </LinearLayout>
+
+            <View style="@style/line"/>
 
 
-    <LinearLayout style="@style/item_LinLay.inline">
+            <LinearLayout style="@style/item_LinLay">
 
-        <LinearLayout
-            style="@style/subitem_LinLay.inline">
-
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
-
-                <EditText
-                    style="@style/infoField_et"
-                    android:id="@+id/repository3_et"
-                    android:hint="@string/repository"
-                    android:inputType="textUri"
-                    android:text="github.com/anray/DevIntensive"
+                <ImageView
+                    style="@style/icon.left"
+                    android:src="@drawable/ic_email_black_24dp"
                     />
 
-            </android.support.design.widget.TextInputLayout>
+                <LinearLayout style="@style/subitem_LinLay">
 
-        </LinearLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        >
 
-        <ImageView
-            style="@style/icon.right"
-            android:src="@drawable/eye"
-            />
-    </LinearLayout>
+                        <EditText
+                            android:id="@+id/email_et"
+                            style="@style/infoField_et"
+                            android:hint="@string/email"
+                            android:inputType="textEmailAddress"
+                            android:text="makeweb@yandex.ru"
+                            />
 
-    <View style="@style/line"/>
+                    </android.support.design.widget.TextInputLayout>
 
-    <LinearLayout style="@style/item_LinLay">
+                </LinearLayout>
 
-        <ImageView
-            style="@style/icon.left"
-            android:src="@drawable/account_circle"
-            />
+                <ImageView
+                    style="@style/icon.right"
+                    android:src="@drawable/ic_send_black_24dp"
+                    />
+            </LinearLayout>
 
-        <LinearLayout style="@style/subitem_LinLay">
+            <View style="@style/line"/>
 
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+            <LinearLayout style="@style/item_LinLay">
 
-                <EditText
-                    style="@style/infoField_et"
-                    android:id="@+id/aboutMyself_et"
-                    android:hint="@string/about_myself"
-                    android:inputType="text"
-                    android:lines="4"
-                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-
+                <ImageView
+                    style="@style/icon.left"
+                    android:src="@drawable/vk_circle"
                     />
 
-            </android.support.design.widget.TextInputLayout>
+                <LinearLayout style="@style/subitem_LinLay">
 
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        >
+
+                        <EditText
+                            android:id="@+id/VK_profile_et"
+                            style="@style/infoField_et"
+                            android:hint="@string/VK_profile"
+                            android:inputType="textUri"
+                            android:text="vk.com/anray"
+                            />
+
+                    </android.support.design.widget.TextInputLayout>
+
+                </LinearLayout>
+
+                <ImageView
+                    style="@style/icon.right"
+                    android:src="@drawable/eye"
+                    />
+            </LinearLayout>
+
+            <View style="@style/line"/>
+
+            <LinearLayout style="@style/item_LinLay">
+
+                <ImageView
+                    style="@style/icon.left"
+                    android:src="@drawable/github_circle"
+                    />
+
+                <LinearLayout style="@style/subitem_LinLay">
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        >
+
+                        <EditText
+                            android:id="@+id/repository1_et"
+                            style="@style/infoField_et"
+                            android:hint="@string/repository"
+                            android:inputType="textUri"
+                            android:text="github.com/anray/DevIntensive"
+                            />
+
+                    </android.support.design.widget.TextInputLayout>
+
+                </LinearLayout>
+
+                <ImageView
+                    style="@style/icon.right"
+                    android:src="@drawable/eye"
+                    />
+            </LinearLayout>
+
+
+            <LinearLayout style="@style/item_LinLay.inline">
+
+                <LinearLayout
+                    style="@style/subitem_LinLay.inline">
+
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        >
+
+                        <EditText
+                            android:id="@+id/repository2_et"
+                            style="@style/infoField_et"
+                            android:hint="@string/repository"
+                            android:inputType="textUri"
+                            android:text="github.com/anray/DevIntensive"
+                            />
+
+                    </android.support.design.widget.TextInputLayout>
+
+                </LinearLayout>
+
+                <ImageView
+                    style="@style/icon.right"
+                    android:src="@drawable/eye"
+                    />
+            </LinearLayout>
+
+
+            <LinearLayout style="@style/item_LinLay.inline">
+
+                <LinearLayout
+                    style="@style/subitem_LinLay.inline">
+
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        >
+
+                        <EditText
+                            android:id="@+id/repository3_et"
+                            style="@style/infoField_et"
+                            android:hint="@string/repository"
+                            android:inputType="textUri"
+                            android:text="github.com/anray/DevIntensive"
+                            />
+
+                    </android.support.design.widget.TextInputLayout>
+
+                </LinearLayout>
+
+                <ImageView
+                    style="@style/icon.right"
+                    android:src="@drawable/eye"
+                    />
+            </LinearLayout>
+
+            <View style="@style/line"/>
+
+            <LinearLayout style="@style/item_LinLay"
+                >
+
+                <ImageView
+                    style="@style/icon.left"
+                    android:src="@drawable/account_circle"
+                    />
+
+                <LinearLayout
+                    style="@style/subitem_LinLay"
+                    android:layout_height="@dimen/size_xxtrabig_136">
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        >
+
+                        <EditText
+                            android:id="@+id/aboutMyself_et"
+
+                            style="@style/infoField_et"
+                            android:hint="@string/about_myself"
+                            android:inputType="text|textMultiLine"
+                            android:maxLines="4"
+                            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+
+                            />
+
+                    </android.support.design.widget.TextInputLayout>
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <View style="@style/line"/>
         </LinearLayout>
-
-
-    </LinearLayout>
-
-    <View style="@style/line"/>
-
-</LinearLayout>
     </ScrollView>
+</LinearLayout>
+
