--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,6 +32,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/font_huge_20</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">sans-serif-condensed</item> <!-- works sine API 16 -->
     </style>
 
     <style name="header_tv.sub">
@@ -90,9 +91,12 @@
         <item name="android:focusable">false</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorHint">@color/grey</item>
-        <item name="android:backgroundTint">@color/grey_backg</item>
+
+        <item name="android:backgroundTint">@color/grey_backg</item> <!-- works sine API 21 -->
+        <!-- <item name="android:background">@null</item> also works but collapses hint and text -->
+
         <item name="android:textSize">@dimen/font_large_18</item>
-        <!--<item name="android:scaleWidth">10%</item>-->
+        <item name="android:fontFamily">sans-serif-condensed</item> <!-- works sine API 16 -->
     </style>
 
     <style name="line">
