--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,90 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v4.widget.NestedScrollView
+<android.support.v4.widget.DrawerLayout
+
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navigation_drawer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              tools:context=".ui.activities.MainActivity">
-
-    <LinearLayout style="@style/header_LL">
-
-        <LinearLayout
-            style="@style/subheader_LL"
-            android:layout_weight="0.25"
-            >
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context=".ui.activities.MainActivity"
+    >
 
 
-            <TextView
-                android:id="@+id/rating_tv"
-                style="@style/header_tv"
-                android:text="5"
-                />
+    <android.support.design.widget.CoordinatorLayout
 
-            <TextView
-                style="@style/header_tv.sub"
-                android:text="Рейтинг"
-                />
+        android:id="@+id/main_coordinator_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
 
-        </LinearLayout>
+        >
 
-        <View style="@style/vertical_line_tv"/>
-
-        <LinearLayout
-            style="@style/subheader_LL"
-            android:layout_weight="0.5"
-            >
-
-
-            <TextView
-                android:id="@+id/numOfCodeStrings_tv"
-                style="@style/header_tv"
-                android:text="5"
-                />
-
-            <TextView
-                style="@style/header_tv.sub"
-                android:text="Написано строк кода"
-                />
-
-        </LinearLayout>
-
-        <View style="@style/vertical_line_tv"/>
-
-        <LinearLayout
-            style="@style/subheader_LL"
-            android:layout_weight="0.25"
-            >
-
-
-            <TextView
-                android:id="@+id/projects_tv"
-                style="@style/header_tv"
-                android:text="5"
-                />
-
-            <TextView
-                style="@style/header_tv.sub"
-                android:text="Проектов"
-                />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-
-
-        <!--
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
--->
+            android:background="@color/color_primary"
+            android:fitsSystemWindows="true"
+            android:theme="@style/AppTheme.AppBarOverlay"
+            >
+
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapsing_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:contentScrim="@color/color_primary"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                >
+                
+                <ImageView
+                    android:id="@+id/user_photo_iv"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/size_toolbar_image_256"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/profile"
+                    android:fitsSystemWindows="true"
+                    />
+
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:theme="@style/AppTheme.PopupOverlay"
+                    android:titleTextColor="@color/white"
+                    app:layout_collapseMode="pin"
+                    />
+
+
+            </android.support.design.widget.CollapsingToolbarLayout>
+
+
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
+
+            <LinearLayout style="@style/header_LL">
+
+                <LinearLayout
+                    style="@style/subheader_LL"
+                    android:layout_weight="0.25"
+                    >
+
+
+                    <TextView
+                        android:id="@+id/rating_tv"
+                        style="@style/header_tv"
+                        android:text="5"
+                        />
+
+                    <TextView
+                        style="@style/header_tv.sub"
+                        android:text="Рейтинг"
+                        />
+
+                </LinearLayout>
+
+                <View style="@style/vertical_line_tv"/>
+
+                <LinearLayout
+                    style="@style/subheader_LL"
+                    android:layout_weight="0.5"
+                    >
+
+
+                    <TextView
+                        android:id="@+id/numOfCodeStrings_tv"
+                        style="@style/header_tv"
+                        android:text="5"
+                        />
+
+                    <TextView
+                        style="@style/header_tv.sub"
+                        android:text="Написано строк кода"
+                        />
+
+                </LinearLayout>
+
+                <View style="@style/vertical_line_tv"/>
+
+                <LinearLayout
+                    style="@style/subheader_LL"
+                    android:layout_weight="0.25"
+                    >
+
+
+                    <TextView
+                        android:id="@+id/projects_tv"
+                        style="@style/header_tv"
+                        android:text="5"
+                        />
+
+                    <TextView
+                        style="@style/header_tv.sub"
+                        android:text="Проектов"
+                        />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+            <!--
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+    -->
             <LinearLayout style="@style/item_LinLay">
 
                 <ImageView
@@ -112,6 +177,7 @@
                 </LinearLayout>
 
                 <ImageView
+                    android:id="@+id/call"
                     style="@style/icon.right"
                     android:src="@drawable/ic_perm_phone_msg_black_24dp"
                     />
@@ -330,9 +396,31 @@
             </LinearLayout>
 
             <View style="@style/line"/>
-        <!--</LinearLayout> -->
+            <!--</LinearLayout> -->
 
-</LinearLayout>
+        </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
 
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_mode_edit_black_24dp"
+            app:layout_anchor="@id/appbar_layout"
+            app:layout_anchorGravity="right|bottom"
+            android:layout_marginRight="@dimen/spacing_fab_right"
+            />
+
+</android.support.design.widget.CoordinatorLayout>
+
+<android.support.design.widget.NavigationView
+android:id="@+id/navigation_view"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:layout_gravity="left"
+app:headerLayout="@layout/drawer_header"
+app:menu="@menu/drawer_menu"
+    />
+
+    </android.support.v4.widget.DrawerLayout>
