--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,7 +30,7 @@
     <dimen name="size_toolbar_image_256">256dp</dimen>
     <dimen name="line_size_1">1dp</dimen>
     <dimen name="button_login_height_36">36dp</dimen>
-    <dimen name="button_login_width_125">125dp</dimen>
+    <dimen name="button_login_width_126">126dp</dimen>
     <dimen name="button_forgot_password_height_16">16dp</dimen>
     <dimen name="placeholder_photo_size_90">90dp</dimen>
     <dimen name="corner_radius_2">2dp</dimen>
@@ -44,6 +44,7 @@
     <dimen name="font_large_18">18sp</dimen>
     <dimen name="font_huge_20">20sp</dimen>
     <dimen name="font_huge_24">24sp</dimen>
+    <dimen name="login_card_width_240">240dp</dimen>
 
 
 </resources>
