Implemented getting and saving of raiting, code lines, projects

--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -75,7 +75,7 @@
                         style="@style/infoField_et.loginField_et"
                         android:hint="@string/email"
                         android:inputType="textEmailAddress"
-                        android:text="email@email.ru"
+                        android:text="anray@mail.ru"
                         />
 
                 </android.support.design.widget.TextInputLayout>
@@ -89,6 +89,7 @@
                         style="@style/infoField_et.loginField_et"
                         android:hint="@string/password"
                         android:inputType="textPassword"
+                        android:text="01234"
                         />
 
                 </android.support.design.widget.TextInputLayout>
