--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
-            android:text="@string/app_name"
+            android:text="Вася"
             android:textColor="@android:color/white"
             android:textSize="@dimen/font_medium_14"
             />
