--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -3,6 +3,7 @@
 
     <group android:checkableBehavior="single">
         <item
+
             android:id="@+id/user_profile_id"
             android:checkable="true"
             android:icon="@drawable/ic_account_circle_black_24dp"
@@ -13,6 +14,13 @@
             android:icon="@drawable/ic_people_black_24dp"
             android:title="@string/contacts"/>
 
+    </group>
+
+    <group android:checkableBehavior="none">
+    <item android:checkable="false"
+        android:id="@+id/logout"
+        android:icon="@drawable/logout"
+        android:title="@string/logout"/>
     </group>
 
 </menu>
