Implemented login by Token and therefore updated Splash Screen behaviour

--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -28,6 +28,7 @@
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="@dimen/corner_radius_2"
             app:cardElevation="@dimen/card_elevation_8"
+            android:visibility="gone"
             >
 
             <LinearLayout
